Conserta os exemplos e o ThesisPUC_uk.cls

--- a/docs/Exple.tex
+++ b/docs/Exple.tex
@@ -137,6 +137,10 @@ Uma aplica\c{c}\~{a}o importante deste trabalho em computa\c{c}\~{a}o gr\'{a}fic
 
 Planejamos continuar este trabalho em tr\^{e}s dire\c{c}\~{o}es. Primeiramente, como mencionado acima, aplicar a teoria de Forman e a an\'{a}lise de nosso algoritmo para a compress\~{a}o de malhas volum\'{e}tricas em $\Rset^{n}, n \geq 3$. Tentaremos tamb\'{e}m aplicar a teoria de Morse discreta para resolver as singularidades que aparecem nas reconstru\c{c}\~{o}es de modelos. Finalmente, esperamos produzir um morphing topologicamente consistente utilizando o campo gradiente discreto de dois objetos com o mesmo tipo de homotopia.
 
+\begin{figure}
+  \includegraphics*[width=\linewidth]{ctor4_none.eps}
+  \caption{Uma figura}
+\end{figure}
 
 \arial
 \bibliography{Exple}
@@ -149,7 +153,7 @@ Planejamos continuar este trabalho em tr\^{e}s dire\c{c}\~{o}es. Primeiramente, 
 % %
 % \noindent
 % \begin{tabular}{ll}
-% \mathbb{R} & conjunto dos números reais \\
+% \mathbb{R} & conjunto dos n?meros reais \\
 % \end{tabular}
 %
 %\end{thenotations}
@@ -157,7 +161,7 @@ Planejamos continuar este trabalho em tr\^{e}s dire\c{c}\~{o}es. Primeiramente, 
 
 \appendix
 
-\chapter{Primeiro Apêndice}
-O primeiro apêndice deve vir após as referências bibliográficas. Depois que você colocar a diretiva ``{$\backslash$}apendix'', todos os ``{$\backslash$}chapter\{\}'' vão gerar apêndices.
+\chapter{Primeiro ApÃªndice}
+O primeiro apÃªndice deve vir apÃ³s as referÃªncias bibliogrÃ¡ficas. Depois que vocÃª colocar a diretiva ``{$\backslash$}apendix'', todos os ``{$\backslash$}chapter\{\}'' vÃ£o gerar apÃªndices.
 
 \end{document}
