--- a/docs/Exple_uk.tex
+++ b/docs/Exple_uk.tex
@@ -16,8 +16,8 @@
 
 \author{Thomas Lewiner}
 \authorR{Lewiner, Thomas}
-\adviser{Hélio Côrtes Vieira Lopes}
-\adviserR{Lopes, Hélio Côrtes Vieira}
+\adviser{HÃ©lio CÃ´rtes Vieira Lopes}
+\adviserR{Lopes, HÃ©lio CÃ´rtes Vieira}
 \coadviser{Geovan Tavares dos Santos}
 \coadviserR{Santos, Geovan Tavares dos}
 \title{Constructing Discrete Morse Functions}
@@ -37,14 +37,14 @@
 \jury{%
   \jurymember{Luis Velho}{Visgraf Laboratory --- IMPA}%
   \jurymember{Jorge Stolfi}{Institute of Computing -- UNICAMP}%
-  \schoolhead{José Eugenio Leal}%
+  \schoolhead{JosÃ© Eugenio Leal}%
 }
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \resume{%
-Thomas Lewiner graduated from the Ecole Polytechnique (Paris, France) in Algebra and Computer Science, and in Theoretical Physics. He then specialized at the Ecole Supérieure des Télécommunications (Paris, France) in Signal and Image Processing, and in Project Management, while working for Inventel in wireless telecommunication systems based on BlueTooth technology. He then obtained a Master degree at the PUC--Rio in computational topology, and actively participated on the department's work for Petrobras.}
+Thomas Lewiner graduated from the Ecole Polytechnique (Paris, France) in Algebra and Computer Science, and in Theoretical Physics. He then specialized at the Ecole SupÃ©rieure des TÃ©lÃ©communications (Paris, France) in Signal and Image Processing, and in Project Management, while working for Inventel in wireless telecommunication systems based on BlueTooth technology. He then obtained a Master degree at the PUC--Rio in computational topology, and actively participated on the department's work for Petrobras.}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
