Especifica dvipdfmx como fallback no hyperref
Assim permite rodar o pdflatex.

--- a/texmf/tex/latex/ThesisPUC/ThesisPUC.cls
+++ b/texmf/tex/latex/ThesisPUC/ThesisPUC.cls
@@ -152,7 +152,7 @@
 \RequirePackage{lastpage}
 
 % hyperlink and pdf bookmarks
-\RequirePackage[backref,dvipdfmx,colorlinks=false,bookmarksopen=true,breaklinks=true]{hyperref}
+\RequirePackage[backref,driverfallback=dvipdfmx,colorlinks=false,bookmarksopen=true,breaklinks=true]{hyperref}
 %linkcolor=blue,anchorcolor=black,citecolor=cyan,urlcolor=red,pagecolor=black,bookmarksnumbered=false,
 
 \selectlanguage{brazil}
