Ajeita o logotipo da PUC

--- a/texmf/tex/latex/ThesisPUC/ThesisPUC.cls
+++ b/texmf/tex/latex/ThesisPUC/ThesisPUC.cls
@@ -139,7 +139,7 @@
 \RequirePackage[subfigure]{tocloft}
 
 % actively change margins
-\RequirePackage{chngpage}
+\RequirePackage{changepage}
 
 % line spacing
 \RequirePackage{setspace}
@@ -168,6 +168,28 @@
 %
 % page layout
 %
+\DeclareRobustCommand{\settext}[5]{%
+  \@ifmtarg{#1}{}{\setlength{\textheight}{#1}}%
+  \@ifmtarg{#2}{}{\setlength{\textwidth}{#2}}%
+  \@ifmtarg{#3}{}{\setlength{\evensidemargin}{#3}}%
+  \@ifmtarg{#4}{}{\setlength{\oddsidemargin}{#4}}%
+  \@ifmtarg{#5}{}{\setlength{\columnsep}{#5}}%
+  \ch@ngetext%
+}
+
+\DeclareRobustCommand{\setpage}[9]{%
+  \@ifmtarg{#1}{}{\setlength{\textheight}{#1}}%
+  \@ifmtarg{#2}{}{\setlength{\textwidth}{#2}}%
+  \@ifmtarg{#3}{}{\setlength{\evensidemargin}{#3}}%
+  \@ifmtarg{#4}{}{\setlength{\oddsidemargin}{#4}}%
+  \@ifmtarg{#5}{}{\setlength{\columnsep}{#5}}%
+  \ch@ngetext%
+  \@ifmtarg{#6}{}{\setlength{\topmargin}{#6}}%
+  \@ifmtarg{#7}{}{\setlength{\headheight}{#7}}%
+  \@ifmtarg{#8}{}{\setlength{\headsep}{#8}}%
+  \@ifmtarg{#9}{}{\setlength{\footskip}{#9}}%
+}
+
 \setlength{\parindent}{1cm}
 \setlength{\voffset}{-1in}
 \setlength{\topmargin}{20pt}
@@ -773,7 +795,7 @@
   \thispagestyle{empty}%
   \pdfbookmark[0]{\puc@title}{anchor:title}%
   \singlespacing\arial%
-  \puc@rightmargin{\includegraphics{puc.ps}}%
+  \puc@rightmargin{\includegraphics{puc}}%
   \vspace*{\stretch{1}}%
   \par%
   \puc@rightmargin{\large \arial \textbf{\puc@author} \normalsize}%
@@ -819,7 +841,7 @@
   \puc@setmargins@front%
   \thispagestyle{empty}%
   \singlespacing\arial%
-  \puc@rightmargin{\includegraphics{puc.ps}}%
+  \puc@rightmargin{\includegraphics{puc}}%
   \vspace*{\stretch{0.5}}%
   \par%
   \puc@rightmargin{\large \arial \textbf{\puc@author} \normalsize}%
