Remove warning do babel
Remove o warning "The main language cannot be set as both a global and a
package option".

--- a/texmf/tex/latex/ThesisPUC/ThesisPUC.cls
+++ b/texmf/tex/latex/ThesisPUC/ThesisPUC.cls
@@ -57,7 +57,7 @@
 \RequirePackage{ifthen}
 
 % hyphenation
-\RequirePackage[british,brazil]{babel}
+\RequirePackage[british,main=brazil]{babel}
 
 % PhD thesis or MsC dissertation
 \newboolean{puc@phd}
